--- a/fern/docs.yml
+++ b/fern/docs.yml
@@ -167,6 +167,7 @@ navigation:
         layout: 
           - calls
           - conferences
+          - queues
       - api: REST Platform Management
         api-name: platform
         layout: 
