--- a/fern/apis/platform/platform.yaml
+++ b/fern/apis/platform/platform.yaml
@@ -9,7 +9,7 @@ info:
     url: https://opensource.org/licenses/MIT
   version: 1.0.0
 servers:
-  - url: https://api.jambonz.cloud
+  - url: https://api.jambonz.cloud/v1
 security:
   - bearerAuth: []
 tags:
@@ -37,7 +37,6 @@ tags:
     description: Least cost Call Routing
 
 paths:
-  
   /Sbcs:
     get:
       tags:
@@ -1574,116 +1573,6 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/GeneralError'
-      callbacks:
-        onRegistrationAttempt:
-          '{$request.body#/registrationUrl}/auth':
-            post:
-              requestBody:
-                description: |
-                  provides details of the authentication request.  The receiving server is responsible for authenticating the 
-                  request as per [RFC 2617](https://tools.ietf.org/html/rfc2617)
-                content:
-                  application/json:
-                    schema:
-                      required:
-                        - method
-                        - realm
-                        - username
-                        - expires
-                        - nonce
-                        - uri
-                        - response
-                      type: object
-                      properties:
-                        method:
-                          type: string
-                          description: sip request method
-                          example: REGISTER
-                        realm:
-                          type: string
-                          description: sip realm
-                          example: mycompany.com
-                        username:
-                          type: string
-                          description: sip username provided
-                          example: daveh
-                        expires:
-                          type: number
-                          description: expiration requested, in seconds
-                          example: 3600
-                        scheme:
-                          type: string
-                          description: encryption protocol
-                          example: digest
-                        nonce:
-                          type: string
-                          description: nonce value
-                          example: InFriVGWVoKeCckYrTx7wg=="
-                        uri:
-                          type: string
-                          format: uri
-                          description: sip uri in request
-                          example: sip:mycompany.com
-                        algorithm:
-                          type: string
-                          description: encryption algorithm used, default to MD5 if not provided
-                          example: MD5
-                        qop:
-                          type: string
-                          description: qop value
-                          example: auth
-                        cnonce:
-                          type: string
-                          description: cnonce value
-                          example: 6b8b4567
-                        nc:
-                          type: string
-                          description: nc value
-                          example: 1
-                        response:
-                          type: string
-                          description: digest value calculated by the client
-                          example: be641cf7951ff23ab04c57907d59f37d
-              responses:
-                '200':
-                  description: |
-                    Your callback should return this HTTP status code in all cases.
-                    if the request was authenticated and you wish to admit 
-                    the client to the network, this is indicated by setting the 'response' 
-                    attribute in the body to 'ok'
-                  content:
-                    application/json:
-                      schema:
-                        type: object
-                        required:
-                          - status
-                        properties:
-                          status:
-                            type: string
-                            description: indicates whether the request was successfully authenticated
-                            enum:
-                              - ok
-                              - fail
-                            example: ok
-                          message:
-                            type: string
-                            description: a human-readable message
-                            example: authentication granted
-                          call_hook:
-                            type: string
-                            format: url
-                            description: url of application to invoke when this device places a call
-                          expires:
-                            type: number
-                            description: |
-                              The expires value to grant to the requesting user.
-                              If not provided, the expires value in the request is observed.
-                              If provided, must be less than the requested expires value.
-                          blacklist:
-                            type: number
-                            description: |
-                              If provided, represents a period in seconds during which the source IP 
-                              address should be blacklisted by the platform (0 means forever).
     get:
       tags:
         - Accounts
@@ -2132,8 +2021,8 @@ paths:
         schema:
           type: string
           enum:
-            - true
-            - false
+            - "true"
+            - "false"
           description: retrieve only answered calls
       - in: query
         name: direction
@@ -2413,8 +2302,8 @@ paths:
         schema:
           type: string
           enum:
-            - true
-            - false
+            - "true"
+            - "false"
           description: retrieve only answered calls
       - in: query
         name: direction
@@ -3869,8 +3758,10 @@ components:
         voip_carrier_sid:
           type: string
           format: uuid
+          example: da6bc389-62fb-123e-209c-4201ac180045
         name:
           type: string
+          example: my carrier
         description:
           type: string
         account_sid:
